--- a/src/components/paypal/Paypal.css
+++ b/src/components/paypal/Paypal.css
@@ -1,9 +1,9 @@
 /* PAYPAL BUTTON */
-.paypal-nutcracker {
+/* .paypal-nutcracker {
   margin: 10px auto;
   display: block;
   text-align: center;
-}
+} */
 
 .paypal-nutcracker select {
   height: 40px;
